<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".main.LoginScreenActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Hai..." />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="Please sorry, this application is only for tablet." />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:gravity="top|center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="20dp">

        <TextView
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_login_heading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_icon_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:minHeight="30dp"
                android:hint="@string/hints_username"
                android:minWidth="150dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_icon_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/hints_password"
                android:minHeight="30dp"
                android:minWidth="150dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_icon_hindi" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:minHeight="30dp"
                android:prompt="@string/hints_select_language"
                android:minWidth="150dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_dropdown" />
        </LinearLayout>

        <TextView
            android:id="@+id/vT_al_loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:gravity="center"
            android:minHeight="30dp"
            android:text="@string/str_login_text"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/border" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/str_or" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/border" />
        </LinearLayout>

        <TextView
            android:id="@+id/vT_al_fingerPrintLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:gravity="center"
            android:minHeight="30dp"
            android:text="@string/str_finger_print_login"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
